feat: Añadiendo nuevos endpoints para reportes y nuevo endpoint para verificar si el cliente tiene tarjeta de credito
