# src/main/resources/openapi.yaml
@@ -11,9 +11,13 @@ servers:
     description: Local Server
 tags:
   - name: credits
-    description: Operations about credits
+    description: Credit operations
   - name: creditCards
-    description: Operations about credit cards
+    description: Credit card operations
+  - name: movements
+    description: Movement operations
+  - name: reports
+    description: Reports operations
 paths:
   /api/credits:
       get:
@@ -291,10 +295,33 @@ paths:
             $ref: '#/components/responses/BadRequest'
           '404':
             $ref: '#/components/responses/NotFound'
+  /api/creditcards/has-credit-card/{clientId}:
+      get:
+        tags:
+          - creditCards
+        description: Check if the client has a credit card
+        summary: Check if the client has a credit card
+        operationId: checkHasCreditCard
+        parameters:
+          - name: clientId
+            in: path
+            description: ID of the client
+            required: true
+            schema:
+              type: string
+        responses:
+          '200':
+            description: Has credit card
+            content:
+              application/json:
+                schema:
+                  type: boolean
+          '404':
+            $ref: '#/components/responses/NotFound'
   /api/movements:
       get:
         tags:
-          - credits
+          - movements
         description: Get all movements
         summary: Get all movements
         operationId: findAllMovements
@@ -309,7 +336,7 @@ paths:
                     $ref: '#/components/schemas/MovementDto'
       post:
         tags:
-          - credits
+          - movements
         description: Create a new movement
         summary: Create a new movement
         operationId: createMovement
@@ -332,7 +359,7 @@ paths:
             $ref: '#/components/responses/AlreadyExists'
       put:
         tags:
-          - credits
+          - movements
         description: Update a movement
         summary: Update a movement
         operationId: updateMovement
@@ -355,7 +382,7 @@ paths:
             $ref: '#/components/responses/NotFound'
       delete:
         tags:
-          - credits
+          - movements
         description: Delete a movement
         summary: Delete a movement
         operationId: deleteMovement
@@ -370,6 +397,27 @@ paths:
             description: Movement deleted
           '404':
             $ref: '#/components/responses/NotFound'
+  /api/reports/calculateAverageDailyBalance:
+    post:
+      tags:
+        - reports
+      summary: Check diary balance of client's account
+      description: Check diary balance of client's account
+      operationId: checkBalanceClient
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SearchReportDto'
+      responses:
+        '200':
+          description: Balance consulted
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ReportProjection'
+
 components:
   responses:
       NotFound:
@@ -523,3 +571,30 @@ components:
           type: number
           format: double
           description: Amount of the operation
+    SearchReportDto:
+      type: object
+      properties:
+        clientId:
+          type: string
+          description: ID of the client
+        startDate:
+          type: string
+          description: Start date of the report
+          format: date
+          pattern: '^\\d{4}-\\d{2}-\\d{2}$'
+        endDate:
+          type: string
+          description: End date of the report
+          format: date
+          pattern: '^\\d{4}-\\d{2}-\\d{2}$'
+    ReportProjection:
+      type: object
+      properties:
+        creditCard:
+          $ref: '#/components/schemas/CreditCardDto'
+        credit:
+          $ref: '#/components/schemas/CreditDto'
+        amount:
+          type: number
+          format: double
+          description: Amount of the report
